<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="_1">1</string>
    <string name="txtNumber">12345</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="Minus">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="Multiplication">*</string>
    <string name="_0">0</string>
    <string name="clear">CLR</string>
    <string name="Divide">/</string>
    <string name="Submit">=</string>
    <string name="Decimal">.</string>
</resources>